# mentalHealthCompanion

./: README.md  app.py  docs.txt  index.html  mental_health_companion.db  pyproject.toml
models/: user.py
resources/: exercises.json  mindfulness_exercises.txt
templates/: index.html
tests/: test_app.py
utils/: helpers.py
