[tool.poetry]
name = "mental-health-companion"
version = "0.1.0"
description = ""
authors = ["satyamdas03 <116027621+satyamdas03@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
transformers = "^4.45.1"
torch = "^2.4.1"
nltk = "^3.9.1"
sqlalchemy = "^2.0.35"
flask-httpauth = "^4.8.0"
flask-swagger-ui = "^4.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
